2017-10-09 belangeo <belangeo@gmail.com>

    * Added Jack midi support to the Server.

2017-10-07 belangeo <belangeo@gmail.com>

    * Removed internal import of the random module. Scripts importing
      both pyo and random modules segfault on garbagge collection at exit.

2017-08-28 belangeo <belangeo@gmail.com>

    * Upgraded version number to 0.8.7.

2017-08-28 belangeo <belangeo@gmail.com>

    * Update MacOS and Windows build routine to compile for python 2.7,
      3.5 and 3.6.

2017-08-xx belangeo <belangeo@gmail.com>

    * Fixed encoding of path for various objects.

2017-08-25 belangeo <belangeo@gmail.com>

    * Fixed clean-up of VoiceManager object.

2017-08-25 belangeo <belangeo@gmail.com>

    * Fixed ending point of TableRec's time stream (now keep the last 
      value instead of switching back to 0).

2017-08-23 belangeo <belangeo@gmail.com>

    * Fixed windows 10 dependencies.

2017-08-07 belangeo <belangeo@gmail.com>

    * OscDataSend now can send more than one message per buffer size.

2017-06-28 belangeo <belangeo@gmail.com>

    * Fixed Expr unicode handling.

2017-06-27 belangeo <belangeo@gmail.com>

    * Wrap jack api detection inside a try-except statement in case
      jack2-dbus is used instead of jackd.

2017-06-05 belangeo <belangeo@gmail.com>

    * Added getInterpolated method to PyoMatrixObject class.

2017-06-05 belangeo <belangeo@gmail.com>

    * The server now allow up to 16 channel rms outputs for GUI drawing.

2017-05-18 belangeo <belangeo@gmail.com>

	* Disable Microsoft Midi devices by default. Added
	  Server.allowMicrosoftMidiDevices() method to enable them.

2017-05-16 belangeo <belangeo@gmail.com>

    * Converted remaining print statements to function calls.

2017-04-20 belangeo <belangeo@gmail.com>

    * Upgraded version number to 0.8.6.

2017-04-20 belangeo <belangeo@gmail.com>

    * Added a Copy menu item in PyoObject.ctrl() and DataTable.graph() windows.

2017-04-20 belangeo <belangeo@gmail.com>
